[ENG-5091] Fix addresses list z-index in autocomplete (#564)
Place the popup below .pac-container

--- a/src/components/RequestQuotePage/LeadForm.scss
+++ b/src/components/RequestQuotePage/LeadForm.scss
@@ -8,7 +8,8 @@
   overflow-y: auto;
   bottom: 0;
   left: 0;
-  z-index: 9999999990;
+  // Place the popup below .pac-container which uses $z-index-top
+  z-index: $z-index-top - 1;
   font-family: $font-content;
 
   .Popup-content {
